# SHARK-Platform

./: README.md  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-iree-pinned.txt  send_req.py
.github/workflows/: ci-fusilli-plugin.yml  ci-libshortfin.yml  ci-sglang-benchmark.yml  ci-sglang-integration-tests.yml  ci-sharkfuser.yml  ci-sharktank-nightly.yml  ci-sharktank.yml  ci-sharktuner.yml  ci-shortfin-nightly.yml  ci_boo_conv.yml  ci_e2e_llm_model_test.yml  ci_eval.yaml  ci_eval_llama_3.1_8b.yml  ci_eval_llama_3.1_8b_fp16.yml  ci_eval_short.yaml  ci_llama_3.1_405b_fp4.yml  ci_llama_3.1_70b_fp16.yml  ci_llama_3.1_70b_fp8.yml  ci_llama_3.1_8b_fp16.yml  ci_llama_3.1_8b_fp16_from_tom.yml  ci_llama_3.1_8b_fp8.yml  ci_llama_3.1_8b_fp8_from_tom.yml  ci_mistral_nemo_instruct_2407.yml  ci_sdxl_flux_serving.yml  ci_sync_resources.yml  cleanup_releases.yml  pkgci_shark_ai.yml
app_tests/integration_tests/llm/: datasets.py  model_management.py  server_management.py
build_tools/: torch_rocm_version_map.py
docs/: programming_guide.md  tune_sdxl.md
fusilli-plugin/: .gitignore  CMakeLists.txt  README.md
fusilli-plugin/build_tools/cmake/: FusilliPluginDependencyUtils.cmake
fusilli-plugin/docs/: TheRockRFC.md
fusilli-plugin/include/: graph_import.h  hipdnn_engine_plugin_execution_context.h  hipdnn_engine_plugin_handle.h  utils.h
fusilli-plugin/src/: fusilli_plugin.cpp  hipdnn_engine_plugin_execution_context.h
fusilli-plugin/test/: CMakeLists.txt  test_fusilli_plugin_api.cpp  test_graph_import.cpp  utils.h
fusilli-plugin/test/integration/: CMakeLists.txt  test_basic.cpp  test_convfprop.cpp
scripts/: download_export_irpa.sh  export_and_compile.sh  golden_iree_benchmark.json  result_verifier.py  run_iree_benchmark.sh  run_sdxl_flux.sh  run_serving.sh  setenv.sh  validate_numerics.sh
sharkfuser/: CMakeLists.txt  README.md
sharkfuser/benchmarks/: CMakeLists.txt  driver.cpp
sharkfuser/build_tools/cmake/: CTestMacros.cmake  FusilliBuildUtils.cmake  FusilliTestUtils.cmake
sharkfuser/build_tools/cmake/templates/: FusilliConfig.cmake.in
sharkfuser/build_tools/docker/: exec_docker_ci.sh
sharkfuser/docs/: fusilli.excalidraw
sharkfuser/include/: fusilli.h
sharkfuser/include/fusilli/attributes/: attributes.h  conv_attributes.h  pointwise_attributes.h  tensor_attributes.h  types.h
sharkfuser/include/fusilli/backend/: backend.h  buffer.h  handle.h  runtime.h
sharkfuser/include/fusilli/graph/: context.h  graph.h
sharkfuser/include/fusilli/node/: conv_node.h  node.h  pointwise_node.h
sharkfuser/include/fusilli/support/: asm_emitter.h  cache.h  logging.h
sharkfuser/samples/: CMakeLists.txt
sharkfuser/samples/convolution/: conv_fprop.cpp  conv_fprop_grouped_nchw_kcrs.cpp  conv_fprop_grouped_with_relu_and_bias.cpp  conv_fprop_nchw_kcrs.cpp  conv_fprop_nhwc_krsc.cpp  conv_fprop_nhwc_krsc_with_pad.cpp  conv_fprop_with_bias.cpp  conv_fprop_with_relu.cpp  conv_fprop_with_relu_and_bias.cpp  conv_wgrad_nhwc_krsc.cpp
sharkfuser/samples/pointwise/: pointwise_binary_ops.cpp  pointwise_ops.cpp  pointwise_unary_ops.cpp
sharkfuser/templates/: external_tools.h.in
sharkfuser/tests/: CMakeLists.txt  lit.cfg.py  test_buffer.cpp  test_cache.cpp  test_cache_empty.sh  test_conv_attributes.cpp  test_conv_node.cpp  test_graph.cpp  test_handle.cpp  test_logging.cpp  test_pointwise_attributes.cpp  test_pointwise_node.cpp  test_ssa_validation.cpp  test_tensor_attributes.cpp  utils.h
sharkfuser/tests/hip_tests/: CMakeLists.txt  hip_kernels.cpp  hip_kernels.h  hip_utils.h  test_buffer.cpp  test_handle.cpp  test_hip_buffer_import_api.cpp  test_hip_connection.cpp
sharkfuser/tests/hip_tests/samples/: CMakeLists.txt  conv_fprop_nchw_kcrs.cpp
sharkfuser/tests/lit/: test_asm_emitter.cpp  test_conv_asm_emitter.cpp  test_conv_asm_emitter_nchw_kcrs.cpp  test_conv_asm_emitter_nchw_kcrs_with_pad.cpp  test_conv_asm_emitter_nchw_krsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc_grouped.cpp  test_conv_asm_emitter_nhwc_kcrs.cpp  test_conv_asm_emitter_nhwc_krsc.cpp  test_conv_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_asm_emitter_nhwc_krsc_with_pad.cpp  test_conv_asm_emitter_nhwc_krsc_with_relu.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc.cpp  test_pointwise_asm_emitter_add.cpp  test_pointwise_asm_emitter_div.cpp  test_pointwise_asm_emitter_mul.cpp  test_pointwise_asm_emitter_relu.cpp  test_pointwise_asm_emitter_sub.cpp
sharktank/: conftest.py  pyproject.toml
sharktank/build_tools/: install_test_dependencies.sh
sharktank/sharktank/evaluate/: perplexity_iree.py  perplexity_torch.py
sharktank/sharktank/examples/: export_paged_llm_v1.py  paged_llm_v1.py
sharktank/sharktank/export_layer/: export_kv_cache.py
sharktank/sharktank/kernels/: __init__.py  gemm_fp4.py  gemm_fp4_asm.py
sharktank/sharktank/layers/: __init__.py  base.py  causal_llm.py  ffn_block.py  ffn_moe_block.py  kv_cache.py  linear.py  mixture_of_experts_block.py  mmdit.py  norm.py  paged_attention.py  paged_llama_attention_block.py  rotary_embedding.py  rotary_embedding_hf.py  testing.py
sharktank/sharktank/ops/: _registry.py  attention_impls.py  custom_impls.py  default_impls.py  qlinear_impls.py  quantized_impls.py  (+3 more)
sharktuner/: PYPI_README.md  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
sharktuner/dispatch_tuner/: README.md  __init__.py  __main__.py  dispatch_sample.mlir  dispatch_tuner.py
sharktuner/model_tuner/: README.md  model_tuner.py
sharktuner/sharktuner/: candidate_gen.py  common.py  constraint_generator.py  dispatch_constraints.py  dispatch_parser.py  libtuner.py  spec_builder.py
sharktuner/tests/: candidate_gen_test.py  common_test.py  constraint_generator_test.py  dispatch_constraints_test.py  dispatch_parser_test.py  libtuner_test.py  spec_builder_test.py
shortfin/: CMakeLists.txt  README.md  requirements-tests.txt  setup.py
shortfin/build_tools/: python_lsan_suppressions.txt
shortfin/docs/: extend_attention_design.md
shortfin/python/: array_binding.cc  array_host_ops.cc  lib_ext.cc
(+227 files in other folders)
